@@ -1,4 +1,6 @@
 Current :
+OK - add: the HTML generator generates the code of the module if available
+OK - add: field m_code for modules, to keep the code of top modules
 OK - fix: display "include Foo" instead of "include module Foo" in Latex, Man, Texi
 OK - fix: not display comments associated to include directives
 OK - fix: bad display of type parameters for class and class types
